Change to Demon mode

--- a/control_demon_partyA.ipynb
+++ b/control_demon_partyA.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,12 @@
     "import json\n",
     "import uuid\n",
     "import time\n",
+    "from IPython.display import Image\n",
+    "from IPython.core.display import HTML \n",
+    "\n",
+    "import ipywidgets as widgets\n",
+    "from ipywidgets import interact, interactive, interact_manual, Layout, Button\n",
+    "\n",
     "signalStation = \"http://vwdata.personalhealthtrain.net\"\n",
     "\n",
     "def getStations(signalStation):\n",
@@ -37,9 +43,9 @@
     "\n",
     "def getExecutionResult(signalStation, clientId, taskId, wait=True):\n",
     "    url = signalStation + \"/client/\" + str(clientId) + \"/task/\" + str(taskId) + \"/result\"\n",
-    "    print(url)\n",
+    "    print(\"Results link:\", url)\n",
     "    jsonResult = json.loads(requests.get(url).text)\n",
-    "    \n",
+    "     \n",
     "    while len(jsonResult)==0 & wait:\n",
     "        time.sleep(2)\n",
     "        jsonResult = json.loads(requests.get(url).text)\n",
@@ -56,7 +62,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://github.com/sunchang0124/PHTDemon/blob/master/Pics/demonPic2.png?raw=true\" width=\"600\" height=\"600\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Image(url= \"https://github.com/sunchang0124/PHTDemon/blob/master/Pics/demonPic2.png?raw=true\", width=600, height=600)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -67,18 +96,18 @@
        "  'id': 1,\n",
        "  'institute': 'Maastricht University',\n",
        "  'ip': '192.168.96.1',\n",
-       "  'last_seen': '2019-05-28 12:26:24.944052',\n",
+       "  'last_seen': '2019-05-28 15:08:57.617189',\n",
        "  'name': 'The Maastricht Study'},\n",
        " {'country': 'Netherlands',\n",
        "  'email': 'johan.vansoest@maastro.nl',\n",
        "  'id': 2,\n",
        "  'institute': 'MAASTRO Clinic',\n",
        "  'ip': '192.168.96.1',\n",
-       "  'last_seen': '2019-05-28 12:26:24.023057',\n",
+       "  'last_seen': '2019-05-28 15:08:56.451742',\n",
        "  'name': 'VWData Station Maastro'}]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,140 +125,115 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Read data and define your \"train\" (application)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputData = {\n",
-    "    \"stage\": 1\n",
-    "}\n",
-    "myTrain = defineTrain(\"sophia921025/ppdml_demon\", inputData, 1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Execute the train on client"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Task submitted with ID: 140\n"
-     ]
-    }
-   ],
-   "source": [
-    "clientId = 1\n",
-    "taskId = requestExecution(signalStation, clientId, myTrain)\n",
-    "print(\"Task submitted with ID: %s\" % taskId)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Write results for communicating"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://vwdata.personalhealthtrain.net/client/1/task/140/result\n",
-      "Stage: 1\n",
-      "https://raw.githubusercontent.com/sunchang0124/PPDML/master/Privacy-preserving%20bayesians/preprocessed_dataFile_A.csv\n",
-      "\r\n",
-      "\r\n",
-      "=======================INTERNAL FILE LOG===================== \r\n",
-      "\n",
-      "dict_keys(['sumNoiseBytes'])\n"
-     ]
-    }
-   ],
-   "source": [
-    "results = getExecutionResult(signalStation, clientId, taskId)\n",
-    "print(results[0][\"log\"])\n",
-    "result = json.loads(results[0][\"response\"])\n",
-    "print(result.keys())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Stage 2 at CBS/Maastro endpoint"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# result[\"stage\"] = 2\n",
-    "# mySecondTrain = defineTrain(\"sophia921025/ppdml_demon\", result, 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# clientId = 2\n",
-    "# taskId = requestExecution(signalStation, clientId, mySecondTrain)\n",
-    "# print(\"Task submitted with ID: %s\" % taskId)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://vwdata.personalhealthtrain.net/client/2/task/137/result\n",
-      "Stage: 2\n",
-      "\n",
-      "\n",
-      "=======================INTERNAL FILE LOG===================== \n",
-      "\n",
-      "dict_keys(['sumNoisesAB', 'sumNoisesB'])\n"
-     ]
-    }
-   ],
-   "source": [
-    "clientId = 2\n",
-    "taskId = 137\n",
-    "resultsSecond = getExecutionResult(signalStation, clientId, taskId)\n",
-    "print(resultsSecond[0][\"log\"])\n",
-    "resultSecond = json.loads(resultsSecond[0][\"response\"])\n",
-    "print(resultSecond.keys())\n",
+    "def stage_A1(i):\n",
+    "    ### Read data and define your \"train\" (application) \n",
+    "    inputA = input_data_A.value.split(';')\n",
+    "    columnsNum = len(inputA)\n",
+    "    item = []\n",
+    "    for i in range(0, columnsNum):\n",
+    "        item.append([int(i) for i in inputA[0].split(',')])\n",
     "\n",
-    "sumNoisesAB = resultSecond[\"sumNoisesAB\"]"
+    "    inputData = {\n",
+    "        \"stage\": 1,\n",
+    "        \"dataA\" : item\n",
+    "    }\n",
+    "    print(item)\n",
+    "    myTrain = defineTrain(\"sophia921025/ppdml_demon\", inputData, 1)\n",
+    "\n",
+    "    ### Execute the train on client\n",
+    "    clientId = 1\n",
+    "    taskId = requestExecution(signalStation, clientId, myTrain)\n",
+    "    print(\"Task submitted with ID: %s\" % taskId)\n",
+    "\n",
+    "    ### Write results for communicating\n",
+    "    results = getExecutionResult(signalStation, clientId, taskId)\n",
+    "    print(results[0][\"log\"])\n",
+    "    result = json.loads(results[0][\"response\"])\n",
+    "    print(result.keys())\n",
+    "\n",
+    "    return explainPicA()\n",
+    "\n",
+    "def explainPicA():\n",
+    "    display(Image(url= \"https://github.com/sunchang0124/PHTDemon/blob/master/Pics/demonPic3.png?raw=true\", width=600, height=600))\n",
+    "    display(Image(url= \"https://github.com/sunchang0124/PHTDemon/blob/master/Pics/demonPic4.png?raw=true\", width=600, height=600))\n",
+    "    display(Image(url= \"https://github.com/sunchang0124/PHTDemon/blob/master/Pics/demonPic5.png?raw=true\", width=600, height=600))\n",
+    "    display(Image(url= \"https://github.com/sunchang0124/PHTDemon/blob/master/Pics/demonPic6.png?raw=true\", width=600, height=600))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1\n",
+       "1    2\n",
+       "2    4\n",
+       "Name: 1, dtype: int64"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_A = pd.DataFrame.from_records([[1,2,3],[1,2,4]]).transpose()\n",
+    "df_A.iloc[:,-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ec6409b95a634e4ea41f93a8fb8c9e57",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Text(value='1,2,3,4,5;2,3,2,3,2', description='Input data A (comma separate): ', layout=…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.stage_A1>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#### Demon: Give your data here: ####\n",
+    "style = {'description_width': 'initial'}\n",
+    "uniLayout = Layout(width='50%', height='30px')\n",
+    "input_data_A = widgets.Text(value='1,2,3,4,5;2,3,2,3,2', description='Input data A (comma separate): ', style=style, layout=uniLayout)\n",
+    "# button1 = Button(description=\"Run\", button_style='success', value=None)\n",
+    "\n",
+    "interact_manual(stage_A1, i=input_data_A)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -"
    ]
   },
   {
@@ -241,43 +245,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "resultSecond[\"stage\"] = 3\n",
-    "myThirdTrain = defineTrain(\"sophia921025/fairhealth_test\", resultSecond, 1)"
+    "def stage_A2(event):\n",
+    "    results = getExecutionResult(signalStation, input_clientID.value, input_taskID.value)\n",
+    "    resultSecond = json.loads(results[0][\"response\"])\n",
+    "\n",
+    "    resultSecond[\"stage\"] = 3\n",
+    "    myThirdTrain = defineTrain(\"sophia921025/fairhealth_test\", resultSecond, 1)\n",
+    "\n",
+    "    clientId = 1\n",
+    "    taskId = requestExecution(signalStation, clientId, myThirdTrain)\n",
+    "    print(\"Task submitted with ID: %s\" % taskId)\n",
+    "\n",
+    "    resultsThird = getExecutionResult(signalStation, clientId, taskId)\n",
+    "    print(resultsThird[0][\"log\"])\n",
+    "    resultThird = json.loads(resultsThird[0][\"response\"])\n",
+    "    print(resultThird.keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0477b0b93b22405b9946c62521c3c3eb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "BoundedIntText(value=2, description='Retrieve intermediate result from Client ID:', layout=Layout(height='30px…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "05d2a2980f4a4594998b5c00efe289aa",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "BoundedIntText(value=150, description='Retrieve intermediate result from Task ID:', layout=Layout(height='30px…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2a7492940b8b405b9a7de9e54a868e2f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='success', description='Run', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Task submitted with ID: 138\n"
-     ]
-    }
-   ],
-   "source": [
-    "clientId = 1\n",
-    "taskId = requestExecution(signalStation, clientId, myThirdTrain)\n",
-    "print(\"Task submitted with ID: %s\" % taskId)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://vwdata.personalhealthtrain.net/client/1/task/138/result\n",
+      "Results link: http://vwdata.personalhealthtrain.net/client/2/task/150/result\n",
+      "Task submitted with ID: 151\n",
+      "Results link: http://vwdata.personalhealthtrain.net/client/1/task/151/result\n",
       "Stage: 3\n",
       "\n",
       "\n",
@@ -288,17 +330,12 @@
     }
    ],
    "source": [
-    "resultsThird = getExecutionResult(signalStation, clientId, taskId)\n",
-    "print(resultsThird[0][\"log\"])\n",
-    "resultThird = json.loads(resultsThird[0][\"response\"])\n",
-    "print(resultThird.keys())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Stage 4 at CBS/Maastro"
+    "input_clientID = widgets.BoundedIntText(value=2,max=100,description='Retrieve intermediate result from Client ID:',disabled=False, style=style, layout=uniLayout)\n",
+    "input_taskID = widgets.BoundedIntText(value=150,max=10000,description='Retrieve intermediate result from Task ID:',disabled=False, style=style, layout=uniLayout)\n",
+    "button1 = Button(description=\"Run\", button_style='success', value=None)\n",
+    "\n",
+    "button1.on_click(stage_A2)\n",
+    "display(input_clientID, input_taskID, button1)"
    ]
   },
   {
@@ -306,43 +343,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "resultThird[\"stage\"] = 4\n",
-    "resultThird[\"sumNoisesAB\"] = sumNoisesAB\n",
-    "myFourthTrain = defineTrain(\"sophia921025/fairhealth_test\", resultThird, 1)\n",
-    "print(resultThird.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clientId = 2\n",
-    "taskId = requestExecution(signalStation, clientId, myFourthTrain)\n",
-    "print(\"Task submitted with ID: %s\" % taskId)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "resultsFourth = getExecutionResult(signalStation, clientId, taskId)\n",
-    "print(resultsFourth[0][\"log\"])\n",
-    "resultFourth = json.loads(resultsFourth[0][\"response\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "resultFourth"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
