--- a/control_demon_partyB.ipynb
+++ b/control_demon_partyB.ipynb
@@ -17,6 +17,19 @@
     "import json\n",
     "import uuid\n",
     "import time\n",
+    "from IPython.display import Image\n",
+    "from IPython.core.display import HTML \n",
+    "\n",
+    "import ipywidgets as widgets\n",
+    "from ipywidgets import interact, interactive, interact_manual, Layout, Button"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "signalStation = \"http://vwdata.personalhealthtrain.net\"\n",
     "\n",
     "def getStations(signalStation):\n",
@@ -51,12 +64,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## List Stations (Set up for two data parties)"
+    "## Set up for two data stations (two parties)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://github.com/sunchang0124/PHTDemon/blob/master/Pics/demonPic2.png?raw=true\" width=\"600\" height=\"600\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Image(url= \"https://github.com/sunchang0124/PHTDemon/blob/master/Pics/demonPic2.png?raw=true\", width=600, height=600)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -67,18 +103,18 @@
        "  'id': 1,\n",
        "  'institute': 'Maastricht University',\n",
        "  'ip': '192.168.96.1',\n",
-       "  'last_seen': '2019-05-28 12:08:55.495789',\n",
+       "  'last_seen': '2019-05-28 15:09:30.599025',\n",
        "  'name': 'The Maastricht Study'},\n",
        " {'country': 'Netherlands',\n",
        "  'email': 'johan.vansoest@maastro.nl',\n",
        "  'id': 2,\n",
        "  'institute': 'MAASTRO Clinic',\n",
        "  'ip': '192.168.96.1',\n",
-       "  'last_seen': '2019-05-28 12:08:58.387695',\n",
+       "  'last_seen': '2019-05-28 15:09:31.622865',\n",
        "  'name': 'VWData Station Maastro'}]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,116 +127,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Stage 1 at Data party A (Maastricht Study)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Define train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# inputData = {\n",
-    "#     \"stage\": 1\n",
-    "# }\n",
-    "# myTrain = defineTrain(\"sophia921025/ppdml_demon\", inputData, 1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Run on client"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# clientId = 1\n",
-    "# taskId = requestExecution(signalStation, clientId, myTrain)\n",
-    "# print(\"Task submitted with ID: %s\" % taskId)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Receive result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://vwdata.personalhealthtrain.net/client/1/task/136/result\n",
-      "Stage: 1\n",
-      "https://raw.githubusercontent.com/sunchang0124/PPDML/master/Privacy-preserving%20bayesians/preprocessed_dataFile_A.csv\n",
-      "\r\n",
-      "\r\n",
-      "=======================INTERNAL FILE LOG===================== \r\n",
-      "\n",
-      "dict_keys(['sumNoiseBytes'])\n"
-     ]
-    }
-   ],
-   "source": [
-    "clientId = 1\n",
-    "taskId = 136\n",
-    "results = getExecutionResult(signalStation, clientId, taskId)\n",
-    "print(results[0][\"log\"])\n",
-    "result = json.loads(results[0][\"response\"])\n",
-    "print(result.keys())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Stage 2 at CBS/Maastro endpoint"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result[\"stage\"] = 2\n",
-    "mySecondTrain = defineTrain(\"sophia921025/ppdml_demon\", result, 1)"
+    "## This is data party B"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Task submitted with ID: 137\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "clientId = 2\n",
-    "taskId = requestExecution(signalStation, clientId, mySecondTrain)\n",
-    "print(\"Task submitted with ID: %s\" % taskId)"
+    "def stage_B1(event):\n",
+    "    \n",
+    "    results = getExecutionResult(signalStation, input_clientID.value, input_taskID.value)\n",
+    "    result = json.loads(results[0][\"response\"])\n",
+    "\n",
+    "    inputB = input_data_B.value.split(';')\n",
+    "    columnsNum = len(inputB)\n",
+    "    item = []\n",
+    "    for i in range(0, columnsNum):\n",
+    "        item.append([int(i) for i in inputB[0].split(',')])\n",
+    "\n",
+    "    \n",
+    "    result[\"stage\"] = 2\n",
+    "    result[\"dataB\"] = item\n",
+    "    mySecondTrain = defineTrain(\"sophia921025/ppdml_demon\", result, 1)\n",
+    "\n",
+    "    clientId = 2\n",
+    "    taskId = requestExecution(signalStation, clientId, mySecondTrain)\n",
+    "    print(\"Task submitted with ID: %s\" % taskId)\n",
+    "\n",
+    "    resultsSecond = getExecutionResult(signalStation, clientId, taskId)\n",
+    "    print(resultsSecond[0][\"log\"])\n",
+    "    resultSecond = json.loads(resultsSecond[0][\"response\"])\n",
+    "    print(resultSecond.keys())\n",
+    "\n",
+    "    display(Image(url= \"https://github.com/sunchang0124/PHTDemon/blob/master/Pics/demonPic7.png?raw=true\", width=600, height=600))\n",
+    "    display(Image(url= \"https://github.com/sunchang0124/PHTDemon/blob/master/Pics/demonPic8.png?raw=true\", width=600, height=600))\n",
+    "    display(Image(url= \"https://github.com/sunchang0124/PHTDemon/blob/master/Pics/demonPic9.png?raw=true\", width=600, height=600))\n",
+    "\n",
+    "    sumNoisesAB = resultSecond[\"sumNoisesAB\"]\n",
+    "    event.value = sumNoisesAB\n"
    ]
   },
   {
@@ -209,10 +175,68 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c3d561f05884499b9d4d8114a0e42bd5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "BoundedIntText(value=1, description='Retrieve intermediate result from Client ID:', layout=Layout(height='30px…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8e465613370445589bebab5033212757",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "BoundedIntText(value=150, description='Retrieve intermediate result from Task ID:', layout=Layout(height='30px…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "af6f031a1a0941e4b6f793675d844487",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Text(value='', description='Input data B (comma separate): ', layout=Layout(height='30px', width='50%'), style…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c02f6d6091074df889aa86b909e52732",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='success', description='Run', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://vwdata.personalhealthtrain.net/client/2/task/137/result\n",
+      "http://vwdata.personalhealthtrain.net/client/1/task/149/result\n",
+      "Task submitted with ID: 150\n",
+      "http://vwdata.personalhealthtrain.net/client/2/task/150/result\n",
       "Stage: 2\n",
       "\n",
       "\n",
@@ -220,98 +244,97 @@
       "\n",
       "dict_keys(['sumNoisesAB', 'sumNoisesB'])\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://github.com/sunchang0124/PHTDemon/blob/master/Pics/demonPic7.png?raw=true\" width=\"600\" height=\"600\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://github.com/sunchang0124/PHTDemon/blob/master/Pics/demonPic8.png?raw=true\" width=\"600\" height=\"600\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://github.com/sunchang0124/PHTDemon/blob/master/Pics/demonPic9.png?raw=true\" width=\"600\" height=\"600\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "resultsSecond = getExecutionResult(signalStation, clientId, taskId)\n",
-    "print(resultsSecond[0][\"log\"])\n",
-    "resultSecond = json.loads(resultsSecond[0][\"response\"])\n",
-    "print(resultSecond.keys())\n",
+    "#### Demon: Give your data here: ####\n",
+    "style = {'description_width': 'initial'}\n",
+    "uniLayout = Layout(width='50%', height='30px')\n",
     "\n",
-    "sumNoisesAB = resultSecond[\"sumNoisesAB\"]"
+    "input_clientID = widgets.BoundedIntText(value=1,max=100,description='Retrieve intermediate result from Client ID:',disabled=False, style=style, layout=uniLayout)\n",
+    "input_taskID = widgets.BoundedIntText(value=150,max=10000,description='Retrieve intermediate result from Task ID:',disabled=False, style=style, layout=uniLayout)\n",
+    "input_data_B = widgets.Text(value='1,2,3,2,1;2,2,1,4,3', description='Input data B (comma separate): ', style=style, layout=uniLayout)\n",
+    "button1 = Button(description=\"Run\", button_style='success', value=None)\n",
+    "\n",
+    "button1.on_click(stage_B1)\n",
+    "display(input_clientID, input_taskID, input_data_B, button1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Stage 3 at DMS"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# resultSecond[\"stage\"] = 3\n",
-    "# myThirdTrain = defineTrain(\"sophia921025/fairhealth_test\", resultSecond, 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# clientId = 1\n",
-    "# taskId = requestExecution(signalStation, clientId, myThirdTrain)\n",
-    "# print(\"Task submitted with ID: %s\" % taskId)"
+    "## Calculate final outcome"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://vwdata.personalhealthtrain.net/client/1/task/138/result\n",
-      "Stage: 3\n",
-      "\r\n",
-      "\r\n",
-      "=======================INTERNAL FILE LOG===================== \r\n",
-      "\n",
-      "dict_keys(['randomsSumSet', 'sumNoisesBARand', 'XaTXa'])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "clientId = 1\n",
-    "taskId = 138\n",
-    "resultsThird = getExecutionResult(signalStation, clientId, taskId)\n",
-    "print(resultsThird[0][\"log\"])\n",
-    "resultThird = json.loads(resultsThird[0][\"response\"])\n",
-    "print(resultThird.keys())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Stage 4 at CBS/Maastro"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_keys(['randomsSumSet', 'sumNoisesBARand', 'XaTXa', 'stage', 'sumNoisesAB'])\n"
-     ]
-    }
-   ],
-   "source": [
-    "resultThird[\"stage\"] = 4\n",
-    "resultThird[\"sumNoisesAB\"] = sumNoisesAB\n",
-    "myFourthTrain = defineTrain(\"sophia921025/fairhealth_test\", resultThird, 1)\n",
-    "print(resultThird.keys())"
+    "def stage_B2(event2):\n",
+    "    results = getExecutionResult(signalStation, input_clientID.value, input_taskID.value)\n",
+    "    resultThird = json.loads(results[0][\"response\"])\n",
+    "\n",
+    "    resultThird[\"stage\"] = 4\n",
+    "    resultThird[\"sumNoisesAB\"] = sumNoisesAB\n",
+    "    \n",
+    "    myFourthTrain = defineTrain(\"sophia921025/fairhealth_test\", resultThird, 1)\n",
+    "    print(resultThird.keys())\n",
+    "\n",
+    "    clientId = 2\n",
+    "    taskId = requestExecution(signalStation, clientId, myFourthTrain)\n",
+    "    print(\"Task submitted with ID: %s\" % taskId)\n",
+    "\n",
+    "    resultsFourth = getExecutionResult(signalStation, clientId, taskId)\n",
+    "    print(resultsFourth[0][\"log\"])\n",
+    "    resultFourth = json.loads(resultsFourth[0][\"response\"])"
    ]
   },
   {
@@ -320,29 +343,55 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Task submitted with ID: 139\n"
-     ]
-    }
-   ],
-   "source": [
-    "clientId = 2\n",
-    "taskId = requestExecution(signalStation, clientId, myFourthTrain)\n",
-    "print(\"Task submitted with ID: %s\" % taskId)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6686998d5cfc48a2b82f3cd3ec82cb73",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "BoundedIntText(value=1, description='Retrieve intermediate result from Client ID:', layout=Layout(height='30px…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bddf097f848042f58d6f4c10ded6a1d6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "BoundedIntText(value=151, description='Retrieve intermediate result from Task ID:', layout=Layout(height='30px…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f73293b56f1e4029bbc65b8e402a1629",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='success', description='Run', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://vwdata.personalhealthtrain.net/client/2/task/139/result\n",
+      "http://vwdata.personalhealthtrain.net/client/1/task/151/result\n",
+      "dict_keys(['randomsSumSet', 'sumNoisesBARand', 'XaTXa', 'stage', 'sumNoisesAB'])\n",
+      "Task submitted with ID: 152\n",
+      "http://vwdata.personalhealthtrain.net/client/2/task/152/result\n",
       "Stage: 4\n",
       "XaTXa: 10 - 10\n",
       "XbTXa: 10 - 1\n",
@@ -372,42 +421,14 @@
     }
    ],
    "source": [
-    "resultsFourth = getExecutionResult(signalStation, clientId, taskId)\n",
-    "print(resultsFourth[0][\"log\"])\n",
-    "resultFourth = json.loads(resultsFourth[0][\"response\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'coefficients': [[-11.567832132195491],\n",
-       "  [-4.899961927558223],\n",
-       "  [-63.54778055394095],\n",
-       "  [-2.8535132880358383],\n",
-       "  [0.21742065903845065],\n",
-       "  [3.1446256288705268],\n",
-       "  [102.73767110231726],\n",
-       "  [-11.350641084122314],\n",
-       "  [-314.9687090401608],\n",
-       "  [-284.3560467586901],\n",
-       "  [100.3242237253576],\n",
-       "  [0.7458918790132196],\n",
-       "  [0.014771329331850325]],\n",
-       " 'intercept': -9.219794829436864}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "resultFourth"
+    "sumNoisesAB = button1.value\n",
+    "\n",
+    "input_clientID = widgets.BoundedIntText(value=1,max=100,description='Retrieve intermediate result from Client ID:',disabled=False, style=style, layout=uniLayout)\n",
+    "input_taskID = widgets.BoundedIntText(value=151,max=10000,description='Retrieve intermediate result from Task ID:',disabled=False, style=style, layout=uniLayout)\n",
+    "button2 = Button(description=\"Run\", button_style='success', value=None)\n",
+    "\n",
+    "button2.on_click(stage_B2)\n",
+    "display(input_clientID, input_taskID, button2)"
    ]
   },
   {
